// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`карточка: status === OK: если есть значение, вернет правильный результат 1`] = `
Object {
  "key": "Расчёт транспортного налога",
}
`;

exports[`карточка: status === undefined: вернет правильный результат 1`] = `
Object {
  "key": "Расчёт транспортного налога",
}
`;

exports[`отчет: status === ERROR: вернет флаг для удаления данных 1`] = `
Object {
  "field": "tax",
  "status": "REMOVE",
}
`;

exports[`отчет: status === OK: если есть значение, вернет правильный результат 1`] = `
Object {
  "key": "Транспортный налог",
  "value": "12 000 ₽ в год",
}
`;

exports[`отчет: status === OK: если нет значения, вернет флаг для удаления данных 1`] = `
Object {
  "field": "tax",
  "status": "REMOVE",
}
`;

exports[`отчет: status === undefined: вернет правильный результат 1`] = `
Object {
  "key": "Транспортный налог",
  "value": "",
}
`;
